--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
-<app-pokemon-list></app-pokemon-list>
+<nav class="navbar ">
+    <div class="container-fluid">
+      <a class="navbar-brand link-title">Pokedex</a>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-dark" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
+
+<div class="container">
+    <app-pokemon-list></app-pokemon-list>
+</div>
 
 <router-outlet></router-outlet>
