lista com boostrap

--- a/src/app/pokemon-card/pokemon-card.component.html
+++ b/src/app/pokemon-card/pokemon-card.component.html
@@ -1,6 +1,9 @@
 <div class="pokemon-card">       
         <img [src]="pegarImagemPokemon()" alt="" />
-        <p>{{ pokemon }}</p>
+        <ul class="list-group">
+                <li class="list-group-item">{{ pokemon }}</li>
+        </ul>
+        
 </div>
 
   
